syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

service UserController {
    rpc List(UserListRequest) returns (stream User) {}
    rpc Create(User) returns (User) {}
    rpc Retrieve(UserRetrieveRequest) returns (User) {}
    rpc Update(User) returns (User) {}
    rpc Destroy(User) returns (google.protobuf.Empty) {}
}

message User {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string user_type = 4;
    string mobile_number = 5;
}

message UserListRequest {
}

message UserRetrieveRequest {
    int64 id = 1;
}
